todo-chart/templates/04-backend/backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-from-np-allow
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app: todo-backend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: np-allow
      ports:
        - protocol: TCP
          port: 8080
